First working version of the app.
- Added activity screen
- Generated assignment descriptions and URLs.

--- a/CS61A/app/src/main/res/values/strings.xml
+++ b/CS61A/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CS61A</string>
+    <string name="title_activity_assignment">AssignmentActivity</string>
 </resources>
