--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CS 61A</string>
     <string name="title_activity_assignment">AssignmentActivity</string>
+    <string name="navigation_drawer_opened">Navigation Drawer Opened</string>
+    <string name="navigation_drawer_closed">Navigation Drawer Closed</string>
 </resources>
